--- a/egs/ns/conf/vctk_dparn_1a.yaml
+++ b/egs/ns/conf/vctk_dparn_1a.yaml
@@ -10,6 +10,7 @@ DATASET:
   rir_mode: # image/direct/early
   vol_perturbed: # Tuple
   speed_perturbed: False
+  perturb_frequency_response: False
 
 MODEL:
   type: ns_dparn_v0_causal # model-name
