--- a/egs/ns/conf/vctk_dpcrn_1b.yaml
+++ b/egs/ns/conf/vctk_dpcrn_1b.yaml
@@ -10,6 +10,7 @@ DATASET:
   rir_mode: # image/direct/early
   vol_perturbed: # Tuple
   speed_perturbed: False
+  perturb_frequency_response: False
 
 MODEL:
   type: ns_dpcrn_v0 # model-name
