refactor to version 2
split audio related funcs and modules

--- a/test/pytest.ini
+++ b/test/pytest.ini
@@ -3,6 +3,7 @@ markers =
     src
     nnet
     backbone
+    audio_func
 
 filterwarnings =
     ignore:Call to deprecated create function FieldDescriptor
