--- a/egs/default_config.yaml
+++ b/egs/default_config.yaml
@@ -1,7 +1,8 @@
 dataset:
   train_metafile: ./data/train
   valid_metafile: ./data/valid
-  test_metafile: ./data/test
+  test_folder: ./data/test
+  proc_output_folder: ./proc
   target_sample_rate: 32000
   gain_nomalized_to: # ex: -28
   training_length_seconds: 6.
@@ -119,13 +120,22 @@ optimizer:
 
 scheduler:
   type: StepLR
+  warmpup_step: 1
   args:
     step_size: 10
     gamma: 0.5
 
 loss_func:
-  type: SDR
-  
+  # The first loss func
+  - type: Loss-1
+    weighted: 1.
+    args:
+      
+  # The second loss func
+  - type: Loss-2
+    weighted: 1.
+    args:
+      
 model:
   lighting_module:
     type: EncDecMaskBase
